# sagemaker-inference-recommendation-test

./: .gitignore  README.md  pyproject.toml
src/: deploy.py  model.py  output_sample_payload.py  train.py
